fix z-index of "we are hiring ribbon"

--- a/source/themes/geografia_theme/static/css/style.css
+++ b/source/themes/geografia_theme/static/css/style.css
@@ -12,7 +12,9 @@
     padding-left: 10px;
     padding-right: 10px;
 }
-
+.github-fork-ribbon.fixed {
+    z-index: 100;
+}
 .vcard {
   all: initial;
   div {
